--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Game</title>
-        <link rel="stylesheet" type="text/css" href="index.css" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -34,5 +34,5 @@
             </div>
         </div>
     </body>
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
 </html>
